--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 
 <body>
+
+    <!-- Starry Animated Background -->
+    <div class="stars"></div>
+    <div class="nebula"></div>
+
     <!-- Profile Section -->
     <div class="profile-container">
-        <img src="WhatsApp Image 2024-12-18 at 13.49.08_165c3c15.jpg" alt="Rupesh J" class="profile">
+        <img src="WhatsApp Image 2025-03-27 at 13.44.42_41d4ba82.jpg" alt="Rupesh J" class="profile">
         <h1>Rupesh J</h1>
         <h3>Electronics and Communication Engineering - 3rd Year</h3>
     </div>
@@ -37,14 +42,12 @@
         <div class="projects">
             <h2>Projects</h2>
 
-            <!-- Project 1 -->
             <div class="project">
                 <h3>Smart Home Automation</h3>
                 <img src="image.png" alt="Smart Home Automation">
                 <p>A project that automates home appliances using IoT and sensors, making homes smarter and energy-efficient.</p>
             </div>
 
-            <!-- Project 2 -->
             <div class="project">
                 <h3>Obstacle Avoidance Robot</h3>
                 <img src="image.png" alt="Obstacle Avoidance Robot">
@@ -67,6 +70,7 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+
 </body>
 
 </html>
